--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,15 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.8
+  # faire des requetes API
+  http: ^1.4.0
+  # pour la gestion de l'etat
+  provider: ^6.1.5
+  # pour afficher un chargeur lorsque nous envoyer un message
+  flutter_spinkit: ^5.2.1
+  # le kit de texte anime comme chatGPT
+  animated_text_kit: ^4.2.3
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -60,8 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
